@@ -1,3 +1,8 @@
+2008-05-08  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/widgets-types.h 
+	* app/widgets/gimpfiledialog.c: formatting.
+
 2008-05-07  Martin Nordholts  <martinn@svn.gnome.org>
 
 	* app/tools/gimpcroptool.c (gimp_crop_tool_image_changed): Make it
